# Ai

./: .env_exmaple  .gitignore  pyproject.toml  requirements.txt
01. Python/: python.ipynb  standard_problems.ipynb
02. Advanced Python/1. File & Exception Handling/: file_operation.ipynb  package_test.py
02. Advanced Python/2. Modules & Packages/: standard_library.ipynb
02. Advanced Python/2. Modules & Packages/package/: __init__.py
02. Advanced Python/3. SQLite/: example.db  sales_data.db  sqlite.ipynb
02. Advanced Python/4. Logging/: logging.ipynb
02. Advanced Python/4. Logging/logs/: logger.py  test.py
02. Advanced Python/5. Multi Threading/: advance_multi_processing.py  advance_multi_threading.py  factorial_multi_processing.py  multi_processing.py  multi_threading.py  webscrapping_multi_threading.py
02. Advanced Python/6. Memory Management/: memory_manage.ipynb
03. SQL/: MYashSQL.txt
04. Data Analysis/: data_analysis.ipynb
04. Data Analysis/Base Data/: excel_data.xlsx  pickle_file
06. Machine Learning/1. Feature Engineering/: 1. handling_missing_values.ipynb  2. handling_imbalance_dataset.ipynb  3. hamdling_imbalance_dataset_SMOTE.ipynb  4. handling_outliers.ipynb  5. data_encoding.ipynb  6. target_guided_ordinal_encoding.ipynb
06. Machine Learning/2. Exploratory Data Analysis/: 1. wine_quality_EDA.ipynb  2. flight_price_EDA_FE.ipynb  3. google_playstore_EDA_FE.ipynb
06. Machine Learning/4. Linear Regression/: 1. Simple Linear Regression.ipynb  2. Multiple Linear Regression - Economic Dataset.ipynb  3. Polynomial Regression.ipynb  4. Multiple Linear Regression - Housing Dataset.ipynb
06. Machine Learning/5. Ridge, Lasso & ElasticNet/: 1. EDA & FE.ipynb  2. Model Training.ipynb
06. Machine Learning/6. Logistic Regression/: 1. logistic_regression.ipynb
06. Machine Learning/7. Support Vector Machine/: 1. support_vector_classifier.ipynb  2. svm_kernels.ipynb  3. support_vector_regressor.ipynb
06. Machine Learning/Notes/: Algorithms.ipynb  Notes.ipynb
06. Machine Learning/Project/Algerian Forest Fire Prediction using Regression/: README.md
09. Flask & FastAPI/1. Flask/: api.py  app.py  getpost.py  jinja.py  main.py  sample.json
09. Flask & FastAPI/1. Flask/templates/: about.html  form.html  getresult.html  index.html  (+2 more)
12. Streamlit & Gradio/1. Streamlit/: app.py  classification.py  widgets.py
15. LangChain/: pydantic.ipynb
15. LangChain/2. OpenAI/: 1. test.ipynb  2. simple_app.ipynb
15. LangChain/5. Data Transformer/: 1. recurive_character_textsplitter.ipynb  2. character_textsplitter.ipynb  4. recursive_json_splitter.ipynb
15. LangChain/6. Embeddings/: 1. embedding.ipynb  3. huggingface.ipynb
15. LangChain/7. VectorStore/: 1. faiss.ipynb
15. LangChain/8. LCEL/: serve.py  simplellmLCEL.ipynb
16. LangChain/3. Ollama/: app.py
16. LangChain/4. Data Ingestion/: 1. data_ingestion.ipynb
16. LangChain/5. Data Transformer/: 3. HTML_textsplitter.ipynb
16. LangChain/6. Embeddings/: 2. ollama_embedding.ipynb
16. LangChain/7. VectorStore/: 2. chroma.ipynb
16. LangChain/8. LCEL/: client.py
16. LangChain/9. AI Agent with Conversation History/: chatbots.ipynb
(+3 files in other folders)
